methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:32: error: not found: value faitPatern
    faitPatern()
    ^